<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView android:id="@+id/titleTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/insert_prod_name"
        />
    <TextView android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView2"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="Name"
        />
    <EditText
        android:id="@+id/enterNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_prod_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName" />

    <TextView android:id="@+id/productDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/enterNameInput"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/description"
        />
    <EditText
        android:id="@+id/enterDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_prod_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDescription" />

    <ImageView
        android:id="@+id/new_product_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterDescriptionInput"
        android:src="@drawable/ic_photo_camera_black_24dp"
        />

    <ImageView
        android:id="@+id/new_product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterDescriptionInput"
        />
    <TextView android:id="@+id/cancelButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/new_product_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <TextView android:id="@+id/insertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/new_product_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>